<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">464xlat</string>
    <string name="TetherStatus">Tether Status</string>
    <string name="MobileStatus">Mobile Status</string>
    <string name="LastMessage">Last Message</string>
    <string name="BinaryStatus">Binary Status</string>
    <string name="IPv6Address">IPv6 Address</string>
    <string name="IPv4Address">IPv4 Address</string>
    <string name="ClatStatus">Clat Status</string>
    <string name="StdoutLabel">Stdout</string>
    <string name="StderrLabel">Stderr</string>

</resources>